--- a/src/containers/Tenant/Diagnostics/Diagnostics.scss
+++ b/src/containers/Tenant/Diagnostics/Diagnostics.scss
@@ -13,6 +13,7 @@
         --ydb-configs-container-height: 100cqh;
         --ydb-table-with-controls-layout-controls-height: 44px;
         --ydb-table-with-controls-layout-controls-padding-top: 0px;
+        --ydb-table-with-controls-layout-controls-align-items: flex-start;
         overflow: auto;
         flex-grow: 1;
 
